--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -48,7 +48,7 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
                 <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
@@ -65,7 +65,7 @@
             <div class="col-4">
                 <form class="form-inline py-2 my-lg-0 ">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search and Select Someone"
-                        spellcheck="false" id="tags" aria-label="Search">
+                        spellcheck="false" id="tagsAthletes" aria-label="Search">
                 </form>
             </div>
 
@@ -130,7 +130,7 @@
             <tbody data-bind="foreach: records">
                 <tr>
                     <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle"><a href="" style="text-decoration:none; color:black"
+                    <td class="align-middle"><a href="" class="nome" style="text-decoration:none; color:black"
                             data-bind="text: Name, attr: {href:'./athletesDetails.html?id=' + Id }"></a></td>
                     <td class="align-middle" data-bind="html: $root.formatSex(Sex)"></td>
                     <td class="text-end">
@@ -138,9 +138,10 @@
                             data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
-                        <button class="btn btn-default btn-xs">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
-                                title="Selecione para adicionar aos favoritos"></i>
+                        <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
+                            id="heartbt" class="btn btn-favourite">
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
+                                class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </td>
                 </tr>
