--- a/HTML/countries.html
+++ b/HTML/countries.html
@@ -12,6 +12,8 @@
     <link href="\lib\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
     <link href="/lib/font-awesome/dist/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="..\Styles\myCSS.css" />
+    <link rel="stylesheet" href="\lib\jquery-ui\dist\themes\base\jquery-ui.css">
+
 </head>
 
 <body>
@@ -44,8 +46,17 @@
 
     <!-- Working Area -->
     <div class="container">
-        <div class="border-bottom py-2 mb-2">
-            <h2 data-bind="text:displayName"></h2>
+        <div class="d-flex flex-row">
+            <div class="py-2 me-auto mb-1 col-6">
+                <h2 data-bind="text:displayName"></h2>
+            </div>
+            <div class="col-4">
+                <form class="form-inline py-2 my-lg-0 ">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search and Select Someone"
+                        spellcheck="false" id="tagsCountries" aria-label="Search">
+                </form>
+            </div>
+
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
@@ -98,9 +109,10 @@
                             data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
-                        <button class="btn btn-default btn-sm ">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
-                                title="Selecione para adicionar aos favoritos"></i>
+                        <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
+                            id="heartbt" class="btn btn-favourite">
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
+                                class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </div>
                 </div>
@@ -116,7 +128,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">
-                        <img src="../images/Olympic_rings.svg" height="30" /> Loading all the data...
+                        <img src="../images/Olympic_rings.svg" height="30" favourit /> Loading all the data...
                     </h5>
                 </div>
                 <div class="modal-body text-center">
@@ -146,6 +158,7 @@
     <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="\lib\jquery-ui\dist\jquery-ui.js"></script>
     <script src="..\Scripts\myScript.js"></script>
     <script src="..\Scripts\countries.js"></script>
 </body>
