--- a/HTML/games.html
+++ b/HTML/games.html
@@ -12,6 +12,7 @@
     <link href="\lib\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
     <link href="/lib/font-awesome/dist/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="..\Styles\myCSS.css" />
+    <link rel="stylesheet" href="\lib\jquery-ui\dist\themes\base\jquery-ui.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favoritos.html"><i
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
             </div>
@@ -45,8 +46,17 @@
     </nav>
     <!-- Working Area -->
     <div class="container">
-        <div class="border-bottom py-2 mb-2">
-            <h2 data-bind="text:displayName"></h2>
+        <div class="d-flex flex-row">
+            <div class="py-2 me-auto mb-1 col-6">
+                <h2 data-bind="text:displayName"></h2>
+            </div>
+            <div class="col-4">
+                <form class="form-inline py-2 my-lg-0 ">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search and Select Someone"
+                        spellcheck="false" id="tagsGames" aria-label="Search">
+                </form>
+            </div>
+
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
@@ -108,9 +118,10 @@
                             data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
-                        <button class="btn btn-default btn-xs">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
-                                title="Selecione para adicionar aos favoritos"></i>
+                        <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
+                            id="heartbt" class="btn btn-favourite">
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
+                                class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </td>
                 </tr>
@@ -147,6 +158,7 @@
     <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="\lib\jquery-ui\dist\jquery-ui.js"></script>
     <script src="..\Scripts\games.js"></script>
 </body>
 
