--- a/HTML/athletesFull.html
+++ b/HTML/athletesFull.html
@@ -43,7 +43,11 @@
         </div>
     </nav>
     <!-- Work Area-->
+
     <div class="container">
+
+
+
         <div class="py-2 border-bottom mb-3">
             <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
         </div>
@@ -85,6 +89,186 @@
                     data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
             </div>
         </div>
+
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Games
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Year</th>
+                                    <th scope="col">CityName</th>
+                                    <th scope="col">CountryName</th>
+                                    <th scope="col">Logo</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach:Games">
+                                <tr>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Id"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Name"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Year"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: CityName"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: CountryName"></p>
+                                    </td>
+                                    <td class="img">
+                                        <img style="height:40px" data-bind="attr:{src: Logo}"></img>
+                                    </td>
+                                    <td class="text-end">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Modalities
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Photo</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach:Modalities">
+                                <tr>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Id"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Name"></p>
+                                    </td>
+                                    <td class="img">
+                                        <img style="height:40px" data-bind="attr:{src: Photo}"></img>
+                                    </td>
+
+                                    <td class="text-end">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Competitions
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Photo</th>
+                                    <th scope="col">Modality</th>
+                                    <th scope="col">Results</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach:Competitions">
+                                <tr>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Id"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Name"></p>
+                                    </td>
+                                    <td class="img">
+                                        <img style="height:40px" data-bind="attr:{src: Photo}"></img>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Modality"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Results"></p>
+                                    </td>
+                                    <td class="text-end">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="medals">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Medals
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">MedalId</th>
+                                    <th scope="col">MedalName</th>
+                                    <th scope="col">Counter</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach:Medals">
+                                <tr>
+                                    <td class="align-middle">
+                                        <p data-bind="text: MedalId"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: MedalName"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Counter"></p>
+                                    </td>
+                                    <td class="text-end">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
         <!-- /ko -->
         <a href="./athletes.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
 
