Mudei muita coisa nos countries, vê como ficou, temos q deixar mais bonito bt

--- a/HTML/countries.html
+++ b/HTML/countries.html
@@ -106,7 +106,7 @@
                         </h5>
 
                         <a class="stretched-link btn btn-default btn-light btn-sm"
-                            data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
+                            data-bind="attr: { href:'./countryDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
                         <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
