--- a/HTML/graphics.html
+++ b/HTML/graphics.html
@@ -37,42 +37,28 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href=".html"><i
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
+                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
+                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
 
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1 class="text-center">Olympic Games editions List</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-12">
-                                <canvas id="myChart" width="400" height="200"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
 
 
-        <script src="https://www.gstatic.com/charts/loader.js"></script>
-        <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
-        <script src="/lib/jquery/dist/jquery.min.js"></script>
-        <script src="..\Scripts\graphics.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
+    <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="..\Scripts\graphics.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </body>
 
 </html>
