--- a/HTML/gameFull.html
+++ b/HTML/gameFull.html
@@ -36,8 +36,12 @@
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
+                                class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
+                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
             </div>
         </div>
