--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -34,12 +34,16 @@
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
-                    <li class="nav-item"><a class="nav-link " aria-current="page" href="games.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="modalities.html"><i
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
+                                class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
+                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
             </div>
         </div>
@@ -98,16 +102,17 @@
             <div class="col-md-3 col-sm-6 col-lg-3" style="margin:0 0 20px 0">
 
                 <div class="card cardAnimated h-100">
-                    <img data-bind="attr:{src: Photo}" class="card-img-top cardImage" alt="Image Error" />
+                    <a class="btn btn-default btn-light btn-sm"
+                        data-bind="attr: { href:'./modalitiesDetails.html?id=' + Id }">
+                        <img data-bind="attr:{src: Photo}" class="card-img-top cardImage" alt="Image Error"
+                            style="height: 250px;" />
+                    </a>
                     <div class="card-body text-center">
                         <h5 class="card-title text-center" data-bind="text:Name + ' ['+ Id + ']'   "></h5>
                         <p class=" card-text text-center">
                             Esta Modalidade é kinda meh
                         </p>
-                        <a class="stretched-link btn btn-default btn-light btn-sm"
-                            data-bind="attr: { href:'./modalitiesDetails.html?id=' + Id }">
-                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
-                        </a>
+
                         <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
                             id="heartbt" class="btn btn-favourite">
                             <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
