--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -67,10 +67,12 @@
                 <h2 data-bind="text:displayName"></h2>
             </div>
             <div class="col-4">
-                <form class="form-inline py-2 my-lg-0 ">
+                <form class="form-inline py-2 my-lg-0 " id="searchform">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search and Select Someone"
                         spellcheck="false" id="tagsAthletes" aria-label="Search">
                 </form>
+                <div id="error-message" class="ps-2 mb-2"></div>
+
             </div>
 
         </div>
