--- a/HTML/graphics.html
+++ b/HTML/graphics.html
@@ -49,6 +49,33 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card mt-3">
+                    <div class="card-header" style="text-align: center;">
+                        Modalities
+                    </div>
+                    <div class="card-body">
+                        <canvas style="height:550px; width:1500px" id="bar-chart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card mt-3">
+                    <div class="card-header" style="text-align: center;">
+                        Athletes
+                    </div>
+                    <div class="card-body">
+                        <canvas style="height:550px; width:1500px" id="pie-chart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
