--- a/HTML/graphics.html
+++ b/HTML/graphics.html
@@ -74,6 +74,28 @@
                 </div>
             </div>
         </div>
+        <div class="medals">
+            <div class="col-md-12">
+                <div class="card mt-3">
+                    <div class="card-header" style="text-align: center;">
+                        Medals by country
+                    </div>
+                    <div class="card-body">
+                        <canvas style="height:550px; width:1500px" id="medals"></canvas>
+                        <form id="filterForm">
+                            <label for="minMedalsInput">Minimum number of medals:</label>
+                            <input type="number" id="minMedalsInput" name="minMedalsInput">
+                            <br>
+                            <label for="maxMedalsInput">Maximum number of medals:</label>
+                            <input type="number" id="maxMedalsInput" name="maxMedalsInput">
+                            <br>
+                            <input type="submit" value="Filter">
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
