--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -122,6 +122,7 @@
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
+                    <th scope="col">Best Medal</th>
                     <th scope="col">Sex</th>
 
                     <th scope="col" class="text-right"></th>
@@ -132,8 +133,8 @@
                     <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle"><a href="" class="nome" style="text-decoration:none; color:black"
                             data-bind="text: Name, attr: {href:'./athletesDetails.html?id=' + Id }"></a></td>
+                    <td class="align-middle" data-bind="html: $root.formatPosition(BestPosition)"></td>
                     <td class="align-middle" data-bind="html: $root.formatSex(Sex)"></td>
-                    <td class="align-middle" data-bind="html: $root.formatMedal(BestPosition)"></td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-xs"
                             data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
@@ -141,7 +142,7 @@
                         </a>
                         <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
                             id="heartbt" class="btn btn-favourite">
-                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart text-danger' : 'fa fa-heart-o text-danger'}"
                                 class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </td>
