--- a/HTML/index.html
+++ b/HTML/index.html
@@ -79,13 +79,11 @@
 
                 <div>
                     <form>
-                        <input class="form-control mr-sm-2" type="search" style="width:150px"
-                            placeholder="Search and Select Someone" spellcheck="false" id="tagsIndex"
-                            aria-label="Search">
+                        <input class="form-control mr-sm-2" type="search" style="width:200px"
+                            placeholder="Search Anything" spellcheck="false" id="tagsIndex" aria-label="Search">
                     </form>
-
                 </div>
-                <div class="Toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
+                <div class="Toggler ps-2"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
             </div>
     </nav>
     <!-- Working Area -->
@@ -156,8 +154,6 @@
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
-            <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for U by <a
-                    href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a>.</div>
             <div class="navbar-nav">
                 <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de
                         Aveiro</a>
