--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -88,8 +88,8 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-12">
                                 <strong>Diogo Fernandes</strong>
-                                <p><a href="mailto:robertorcastro@ua.pt"
-                                        class="text-decoration-none text-muted">robertocastro@ua.pt</a></p>
+                                <p><a href="mailto:diogomiguel.fernandes@ua.pt"
+                                        class="text-decoration-none text-muted">diogomiguel.fernandes@ua.pt</a></p>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <strong>José Oliveira</strong>
