--- a/HTML/index.html
+++ b/HTML/index.html
@@ -67,6 +67,10 @@
             overflow: hidden;
             /* Hide scrollbars */
         }
+
+        p {
+            padding-bottom: 140px;
+        }
     </style>
 </head>
 
@@ -103,7 +107,7 @@
 
                 <div>
                     <form>
-                        <input class="form-control mr-sm-2" type="search" style="width:200px"
+                        <input class="form-control mr-sm-2" type="search" style="width:150px"
                             placeholder="Search Anything" spellcheck="false" id="tagsIndex" aria-label="Search">
                     </form>
                 </div>
