--- a/HTML/competitions.html
+++ b/HTML/competitions.html
@@ -31,11 +31,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="athletes.html"><i
                                 class="fa fa-user-o text-warning"></i> Athletes</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="competitions.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="competitions.html"><i
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
+                    <li class="nav-item"><a class="nav-link " aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
@@ -57,7 +57,7 @@
             </div>
             <div class="col-4">
                 <form class="form-inline py-2 my-lg-0 ">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search and Select Someone"
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search a Competition"
                         spellcheck="false" id="tagsCompetitions" aria-label="Search">
                 </form>
             </div>
@@ -71,7 +71,6 @@
 
 
 
-        <br>
         <div class="row small">
             <p class=" col-4 mr-auto pt-2">
                 <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
@@ -126,10 +125,14 @@
             <tbody data-bind="foreach: records">
                 <tr>
                     <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td><img class="competitions-img" data-bind="attr:{src: Photo}">
+                    <td class="align-middle"><a href="" class="nome" style="text-decoration:none; color:black"
+                            data-bind="text: Name, attr: {href:'./competitionsDetails.html?id=' + Id }"></a></td>
+                    <td> <a data-bind="attr: { href:'./competitionsDetails.html?id=' + Id }"><img
+                                data-bind="attr: {src:Photo}" class="competitions-img" /></a>
+
                     </td>
-                    <td class="align-middle" data-bind="text:Modality"></td>
+                    <td class="align-middle"> <a href="" style="text-decoration:none; color:black"
+                            data-bind="text: Modality, attr: {href:'./ModalitiesDetails.html?id=' + Id }"></a> </td>
                     <td class="align-middle" data-bind="text:Results"></td>
                     <td style="padding-top:40px" class="text-end">
                         <a class="btn btn-default btn-light btn-xs"
@@ -138,7 +141,7 @@
                         </a>
                         <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
                             id="heartbt" class="btn btn-favourite">
-                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}"
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o text-danger'}"
                                 class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </td>
