--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -28,11 +28,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="athletes.html"><i
                                 class="fa fa-user-o text-warning"></i> Athletes</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="competitions.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="competitions.html"><i
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
+                    <li class="nav-item"><a class="nav-link " aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
@@ -48,65 +48,120 @@
     </nav>
     <!-- Work Area-->
     <div class="container">
-        <div class="py-2 border-bottom mb-3">
-            <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
+        <div class="py-2 border-bottom mb-3 row">
+            <div class="col">
+                <h2 data-bind="text:Name()"></h2>
+            </div>
+            <div class="col pt-2" align="right"><a href="./competitions.html" class="btn btn-default btn-sm small"><i
+                        class="fa fa-list"></i>
+                    Back to List</a>
+
+            </div>
+
         </div>
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Game Id</div>
-            <div class="col-10" data-bind="text: Id"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Name</div>
-            <div class="col-10" data-bind="text: Name"></div>
-        </div>
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">ModalityID</div>
-            <div class="col-10" data-bind="text: ModalityId"></div>
-        </div>
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Modality</div>
-            <div class="col-10" data-bind="text: Modality"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Photo() != '' && Photo() != null">
-            <div class="col-2">Photo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Photo}"><br />
-                <i class="fa fa-link"></i> [<a class="link-dark text-decoration-none"
-                    data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
+
+
+        <div class="row">
+            <div class="col-8 lista">
+                <div class="row border-bottom mx-0 my-1 infos">
+                    <div class="col-2">Id</div>
+                    <div class="col-10" data-bind="text: Id"></div>
+                </div>
+                <div class="row border-bottom mx-0 my-1 infos">
+                    <div class="col-2">Modality</div>
+                    <div class="col-10"><a href="" class="nome" style="text-decoration:none; color:black"
+                            data-bind="text: Modality() +' [' + ModalityId() + ']', attr: {href:'./modalitiesDetails.html?id=' + ModalityId() }"></a>
+                        <i class="fa fa-link"></i>
+                    </div>
+                </div>
+
+
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="modalTitleId">Participants</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="container-fluid">
+                                    <table class="table table-striped table-sm small">
+                                        <thead class="bg-dark text-light">
+                                            <tr>
+                                                <th scope="col">Id</th>
+                                                <th scope="col">Name</th>
+                                                <th scope="col">Year</th>
+                                                <th scope="col">City</th>
+                                                <th scope="col">Country</th>
+
+                                                <th scope="col" class="text-right"></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody data-bind="foreach: Participant">
+                                            <tr>
+                                                <td class="align-middle" data-bind="text:Id"></td>
+                                                <td class="align-middle"> <a href=""
+                                                        style="text-decoration: none; color:black"
+                                                        data-bind="text:Name,attr: { href:'./gameDetails.html?id=' + Id }  "></a>
+                                                </td>
+                                                <td class="align-middle" data-bind="text:Year"></td>
+                                                <td class="align-middle" data-bind="text:CityName"></td>
+                                                <td class="align-middle" data-bind="text:CountryName"></td>
+                                                <td class="text-end">
+                                                    <a class="btn btn-default btn-light btn-xs"
+                                                        data-bind="attr: { href:'./gameDetails.html?id=' + Id }">
+                                                        <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
+                                                    </a>
+
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="modal-footer ">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <script>
+                    var modalId = document.getElementById('modalId');
+
+                    modalId.addEventListener('show.bs.modal', function (event) {
+                        // Button that triggered the modal
+                        let button = event.relatedTarget;
+                        // Extract info from data-bs-* attributes
+                        let recipient = button.getAttribute('data-bs-whatever');
+
+                        // Use above variables to manipulate the DOM
+                    });
+                </script>
+
+                <div><button type="button" class="btn btn-danger btn-lg ms-3 mt-2" data-bs-toggle="modal"
+                        data-bs-target="#modalId">
+                        Participants
+                    </button></div>
+            </div>
+
+            <div class="col-4" align="center"><img id="fotinha" class="img-fluid rounded" data-bind="attr: {src:Photo}"
+                    style="max-height:565px">
             </div>
         </div>
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">City</th>
-                    <th scope="col">Country</th>
 
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: Participant">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
-                    <td class="align-middle" data-bind="text:CityName"></td>
-                    <td class="align-middle" data-bind="text:CountryName"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-xs"
-                            data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
-                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
-                        </a>
-                        <button class="btn btn-default btn-xs">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }"
-                                title="Selecione para adicionar aos favoritos"></i>
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+
+
+
+
+
+
+
 
 
 
