n sei por o accordion de outra cor, pfv ajuda

--- a/HTML/athletesFull.html
+++ b/HTML/athletesFull.html
@@ -43,6 +43,8 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
                                 class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
+                <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
+
             </div>
         </div>
     </nav>
@@ -332,6 +334,7 @@
     <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
     <script src="..\Scripts\athletesFull.js"></script>
+    <script src="..\Scripts\myScript.js"></script>
 </body>
 
 </html>
