--- a/HTML/athletesDetails.html
+++ b/HTML/athletesDetails.html
@@ -44,6 +44,7 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
                                 class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
+                <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
 
             </div>
         </div>
@@ -162,6 +163,7 @@
     <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
     <script src="..\Scripts\athletesDetails.js"></script>
+    <script src="..\Scripts\myScript.js"></script>
 </body>
 
 </html>
