--- a/HTML/countries.html
+++ b/HTML/countries.html
@@ -116,7 +116,7 @@
                         </h5>
                         <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }"
                             id="heartbt" class="btn btn-favourite">
-                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o text-danger'}"
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart text-danger' : 'fa fa-heart-o text-danger'}"
                                 class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </div>
