--- a/HTML/games.html
+++ b/HTML/games.html
@@ -118,7 +118,7 @@
                         </a>
                         <button class="btn btn-favourite"
                             data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }">
-                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o text-danger'}"
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart text-danger' : 'fa fa-heart-o text-danger'}"
                                 class="fa fa-heart-o"></i>
                         </button>
                     </div>
